--- a/bdazjweb/src/main/resources/application.yml
+++ b/bdazjweb/src/main/resources/application.yml
@@ -2,8 +2,39 @@ server:
   port: 18001
   tomcat:
     uri-encoding: UTF-8
-
 spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
+  datasource:
+    driver-class-name: oracle.jdbc.driver.OracleDriver
+    url: jdbc:oracle:thin:@127.0.0.1:1521:xe
+    username: zjbdatag
+    password: admin
+    platform: oracle
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      initial-size: 5
+      min-idle: 1
+      max-active: 20
+      query-timeout: 6000
+      transaction-query-timeout: 6000
+      remove-abandoned-timeout: 1800
+      filters: wall,stat
+
+mybatis:
+    type-aliases-package: com.zj.bda.persistence.entity
+    mapper-locations: classpath:mapper/*.xml
+
+pagehelper:
+    helperDialect: oracle
+    reasonable: true
+    supportMethodsArguments: true
+    params: count=countSql
+mapper:
+  mappers: com.zj.bda.persistence.core.mapper.BaseMapper
+  not-empty: false
+  identity: ORACLE
+logging:
+  level:
+    com.zj.bda.persisitence.mapper: DEBUG
