重新整理本地测试配置文件和线上环境测试文件

--- a/bdazjpersistence/pom.xml
+++ b/bdazjpersistence/pom.xml
@@ -44,7 +44,7 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.3</version>
         </dependency>
-        <!--<dependency>-->
+        <!--<dependency>   no need-->
             <!--<groupId>com.alibaba</groupId>-->
             <!--<artifactId>druid</artifactId>-->
             <!--<version>1.1.9</version>-->
