--- a/bdazjweb/src/main/resources/application-local.yml
+++ b/bdazjweb/src/main/resources/application-local.yml
@@ -45,7 +45,7 @@ pagehelper:
     supportMethodsArguments: true
     params: count=countSql
 mapper:
-  mappers: com.zj.bda.persistence.core.mapper.BaseMapper
+  mappers: com.zj.bda.persistence.base.BaseMapper
   not-empty: false
   identity: ORACLE
 logging:
