自定义启动图案，配置日志文件取名

--- a/bdazjweb/src/main/resources/application-line.yml
+++ b/bdazjweb/src/main/resources/application-line.yml
@@ -48,3 +48,5 @@ mapper:
   mappers: com.zj.bda.persistence.base.BaseMapper
   not-empty: false
   identity: ORACLE
+logging:
+  config: classpath:bda-log.xml
