--- a/bdazjweb/src/main/resources/application-line.yml
+++ b/bdazjweb/src/main/resources/application-line.yml
@@ -36,8 +36,8 @@ spring:
 mybatis:
     type-aliases-package: com.zj.bda.persistence.entity
     mapper-locations: classpath:mapper/*.xml
-    configuration:
-      log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#    configuration:
+#      log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 pagehelper:
     helperDialect: oracle
