--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
     <developers>
         <developer>
-            <name>Bda zj it</name>
+            <name>Dongguabai</name>
             <email>min.wei@brilliant-solution.com</email>
         </developer>
     </developers>
