--- a/bdazjcommon/pom.xml
+++ b/bdazjcommon/pom.xml
@@ -28,5 +28,12 @@
             <artifactId>lombok</artifactId>
             <version>1.16.16</version>
         </dependency>
+
+        <!--a client of idworker to generate global unique id-->
+        <dependency>
+            <groupId>com.github.bingoohuang</groupId>
+            <artifactId>idworker-client</artifactId>
+            <version>0.0.8</version>
+        </dependency>
     </dependencies>
 </project>
