增加了sql、权限模块、优雅处理异常、增加部分工具类

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>bdazjpersistence</module>
         <module>bdazjcommon</module>
         <module>bdazjservice</module>
+        <module>bdazjdgbSecurity</module>
     </modules>
     <modelVersion>4.0.0</modelVersion>
     <developers>
