maven增加版本控制标签，增加dgb-security模块

--- a/bdazjpersistence/pom.xml
+++ b/bdazjpersistence/pom.xml
@@ -16,7 +16,7 @@
 
         <dependency>
             <groupId>com.bda</groupId>
-            <version>${project.version}</version>
+            <version>${com.zj.bda}</version>
             <artifactId>bda-zj-common</artifactId>
         </dependency>
 
