--- a/bdazjcommon/pom.xml
+++ b/bdazjcommon/pom.xml
@@ -28,15 +28,14 @@
             <version>3.2.2</version>
         </dependency>
         <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>1.10</version>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.3</version>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.16</version>
         </dependency>
 
         <!--a client of idworker to generate global unique id-->
