--- a/bdazjweb/src/main/resources/application.yml
+++ b/bdazjweb/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
     user:
       name: bda
       password: bda
+#  cache:
+#    type: ehcache
+#    ehcache:
+#      config: classpath:
 
 logging:
   #config: classpath:bda-log.xml
