--- a/bdazjweb/src/main/resources/application.yml
+++ b/bdazjweb/src/main/resources/application.yml
@@ -18,6 +18,11 @@ spring:
       charset: UTF-8
       enabled: true
       force: true
+  mvc:
+    async:
+      request-timeout: 10000 #async请求的超时时间
+
+
 #  cache:
 #    type: ehcache
 #    ehcache:
