--- a/bdazjcommon/pom.xml
+++ b/bdazjcommon/pom.xml
@@ -28,6 +28,11 @@
             <version>3.2.2</version>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>1.9.3</version>
