--- a/dgbsecurity/pom.xml
+++ b/dgbsecurity/pom.xml
@@ -17,11 +17,20 @@
             <artifactId>bda-zj-persistence</artifactId>
         </dependency>
 
-        <dependency>
+       <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
             <version>2.0.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-security</artifactId>
+            <version>2.0.0.RELEASE</version>
+        </dependency>
+       <!-- <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>-->
 
         <!--集群环境下session管理-->
        <!-- <dependency>
