用户个性化认证流程（一）基本全部OK（后台代码+配置文件结合）

--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -1,4 +1,6 @@
-form.login.page=/index.html
-form.login.success=/test.html
-form.login.action=/login
-form.login.allowedPath=${form.login.page},/assets/**,/druid/**
+dgb.security.browser.loginPage=/index.html
+dgb.security.browser.loginSuccessPage=/test.html
+dgb.security.browser.loginAction=/login
+dgb.security.browser.loginUrl=/authentication/require
+
+dgb.security.allowedPath=${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},${dgb.security.browser.loginUrl},/assets/**,/druid/**,/dgb.html,/
