自定义登陆流程完成，完美

--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -2,5 +2,6 @@ dgb.security.browser.loginPage=/index.html
 dgb.security.browser.loginSuccessPage=/test.html
 dgb.security.browser.loginAction=/login
 dgb.security.browser.loginUrl=/authentication/require
+dgb.security.browser.loginResponseTypeEnum=REDIRECT
 
-dgb.security.allowedPath=${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},${dgb.security.browser.loginUrl},/assets/**,/druid/**,/dgb.html,/
+dgb.security.allowedPath=${dgb.security.browser.loginPage},${dgb.security.browser.loginUrl},/assets/**,/druid/**,/dgb.html,/,/error
