--- a/dgbsecurity/pom.xml
+++ b/dgbsecurity/pom.xml
@@ -17,7 +17,7 @@
             <artifactId>bda-zj-persistence</artifactId>
         </dependency>
 
-       <dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
             <version>2.0.0.RELEASE</version>
@@ -27,17 +27,35 @@
             <artifactId>spring-cloud-starter-security</artifactId>
             <version>2.0.0.RELEASE</version>
         </dependency>
-       <!-- <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>-->
 
         <!--集群环境下session管理-->
-       <!-- <dependency>
+        <dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session</artifactId>
             <version>1.3.2.RELEASE</version>
-        </dependency>-->
+        </dependency>
+
+        <!--social-->
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-config</artifactId>
+            <version>1.1.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-core</artifactId>
+            <version>1.1.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-security</artifactId>
+            <version>1.1.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-web</artifactId>
+            <version>1.1.4.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
