验证码可以正常生成   准备校验验证码

--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -5,4 +5,11 @@ dgb.security.browser.loginUrl=/authentication/require
 #REDIRECT
 dgb.security.browser.loginResponseTypeEnum=JSON
 
-dgb.security.allowedPath=${dgb.security.browser.loginPage},${dgb.security.browser.loginUrl},/assets/**,/druid/**,/dgb.html,/,/error
+#captcha
+dgb.security.graphicVerificationCode.getImageUrl=/captcha/graphical
+dgb.security.graphicVerificationCode.imageWidth=80
+dgb.security.graphicVerificationCode.imageHeight=40
+dgb.security.graphicVerificationCode.codeCount=4
+dgb.security.graphicVerificationCode.expireSeconds=60
+
+dgb.security.allowedPath=${dgb.security.graphicVerificationCode.getImageUrl},${dgb.security.browser.loginPage},${dgb.security.browser.loginUrl},/assets/**,/druid/**,/dgb.html,/,/error
