验证码Ok,代码待重构

--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -11,5 +11,6 @@ dgb.security.graphicVerificationCode.imageWidth=80
 dgb.security.graphicVerificationCode.imageHeight=40
 dgb.security.graphicVerificationCode.codeCount=4
 dgb.security.graphicVerificationCode.expireSeconds=60
+dgb.security.graphicVerificationCode.inputImageCodeName=imageCode
 
-dgb.security.allowedPath=${dgb.security.graphicVerificationCode.getImageUrl},${dgb.security.browser.loginPage},${dgb.security.browser.loginUrl},/assets/**,/druid/**,/dgb.html,/,/error
+dgb.security.allowedPath=${dgb.security.graphicVerificationCode.getImageUrl},${dgb.security.browser.loginPage},${dgb.security.browser.loginUrl},/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico
