验证码重构完毕

--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -1,3 +1,4 @@
+##################browser
 dgb.security.browser.loginPage=/index.html
 dgb.security.browser.loginSuccessPage=/test.html
 dgb.security.browser.loginAction=/login
@@ -5,12 +6,17 @@ dgb.security.browser.loginUrl=/authentication/require
 #REDIRECT
 dgb.security.browser.loginResponseTypeEnum=JSON
 
-#captcha
-dgb.security.graphicVerificationCode.getImageUrl=/captcha/graphical
-dgb.security.graphicVerificationCode.imageWidth=80
-dgb.security.graphicVerificationCode.imageHeight=40
-dgb.security.graphicVerificationCode.codeCount=4
-dgb.security.graphicVerificationCode.expireSeconds=60
-dgb.security.graphicVerificationCode.inputImageCodeName=imageCode
+##################captcha
+dgb.security.captcha.graphic.getImageUrl=/captcha/graphical
+dgb.security.captcha.graphic.checkUrl=/test/*,/c
 
-dgb.security.allowedPath=${dgb.security.graphicVerificationCode.getImageUrl},${dgb.security.browser.loginPage},${dgb.security.browser.loginUrl},/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico
+#url -> width
+dgb.security.captcha.graphic.imageWidth=80
+#url -> height
+dgb.security.captcha.graphic.imageHeight=40
+
+dgb.security.captcha.graphic.codeCount=4
+dgb.security.captcha.graphic.expireSeconds=60
+dgb.security.captcha.graphic.inputImageCodeName=imageCode
+
+dgb.security.allowedPath=${dgb.security.captcha.graphic.getImageUrl},${dgb.security.browser.loginPage},${dgb.security.browser.loginUrl},/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico
