添加记住我

--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -3,12 +3,15 @@ dgb.security.browser.loginPage=/index.html
 dgb.security.browser.loginSuccessPage=/test.html
 dgb.security.browser.loginAction=/login
 dgb.security.browser.loginUrl=/authentication/require
+dgb.security.browser.rememberMeSeconds=20
 #REDIRECT
 dgb.security.browser.loginResponseTypeEnum=JSON
 
 ##################captcha
 dgb.security.captcha.graphic.getImageUrl=/captcha/graphical
-dgb.security.captcha.graphic.checkUrl=/test/*,/c
+
+#default->loginAction
+dgb.security.captcha.graphic.checkUrl=
 
 #url -> width
 dgb.security.captcha.graphic.imageWidth=80
