--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -7,19 +7,23 @@ dgb.security.browser.rememberMeSeconds=20
 #REDIRECT
 dgb.security.browser.loginResponseTypeEnum=JSON
 
-##################captcha
+##################captcha  graphic
 dgb.security.captcha.graphic.getImageUrl=/captcha/graphical
-
 #default->loginAction
-dgb.security.captcha.graphic.checkUrl=
-
+dgb.security.captcha.graphic.loginAction=/login
 #url -> width
 dgb.security.captcha.graphic.imageWidth=80
 #url -> height
 dgb.security.captcha.graphic.imageHeight=40
-
 dgb.security.captcha.graphic.codeCount=4
 dgb.security.captcha.graphic.expireSeconds=60
 dgb.security.captcha.graphic.inputImageCodeName=imageCode
 
-dgb.security.allowedPath=${dgb.security.captcha.graphic.getImageUrl},${dgb.security.browser.loginPage},${dgb.security.browser.loginUrl},/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico
+
+##################captcha  sms
+dgb.security.captcha.sms.codeCount=6
+dgb.security.captcha.sms.expireSeconds=60
+dgb.security.captcha.sms.getSmsUrl=/captcha/sms
+dgb.security.captcha.sms.phoneNumberParam=phoneNumberParam
+
+dgb.security.allowedPath=/captcha/*,${dgb.security.browser.loginPage},${dgb.security.browser.loginUrl},/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico
