一言难尽，巨大的改动，SpringSecurity还是比较复杂的，全部代码进行重构

--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -1,29 +1,10 @@
-##################browser
+
+#浏览器环境
 dgb.security.browser.loginPage=/index.html
-dgb.security.browser.loginSuccessPage=/test.html
-dgb.security.browser.loginAction=/login
-dgb.security.browser.loginUrl=/authentication/require
-dgb.security.browser.rememberMeSeconds=20
-#REDIRECT
-dgb.security.browser.loginResponseTypeEnum=JSON
-
-##################captcha  graphic
-dgb.security.captcha.graphic.getImageUrl=/captcha/graphical
-#default->loginAction
-dgb.security.captcha.graphic.loginAction=/login
-#url -> width
-dgb.security.captcha.graphic.imageWidth=80
-#url -> height
-dgb.security.captcha.graphic.imageHeight=40
-dgb.security.captcha.graphic.codeCount=4
-dgb.security.captcha.graphic.expireSeconds=60
-dgb.security.captcha.graphic.inputImageCodeName=imageCode
+dgb.security.browser.loginAction=/authentication/form
+#请求响应方式：JSON（default）、REDIRECT
+dgb.security.browser.responseType=JSON
 
 
-##################captcha  sms
-dgb.security.captcha.sms.codeCount=6
-dgb.security.captcha.sms.expireSeconds=60
-dgb.security.captcha.sms.getSmsUrl=/captcha/sms
-dgb.security.captcha.sms.phoneNumberParam=phoneNumberParam
-
-dgb.security.allowedPath=/captcha/*,${dgb.security.browser.loginPage},${dgb.security.browser.loginUrl},/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico
+#允许直接访问url
+dgb.security.allowedPaths=${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico
