--- a/dgbschedule/pom.xml
+++ b/dgbschedule/pom.xml
@@ -19,7 +19,7 @@
         </dependency>
 
         <!-- Quartz坐标 -->
-        <dependency>
+       <!-- <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
             <version>2.2.1</version>
@@ -29,20 +29,23 @@
                     <groupId>org.slf4j</groupId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
 
         <!-- 添加Scheduled坐标 -->
-        <dependency>
+       <!-- <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
-        </dependency>
+        </dependency>-->
 
         <!-- Sprng tx 坐标 -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
+        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
         </dependency>
-
     </dependencies>
 
 </project>
