增加验证码Filter，又是一次大改，后续继续重构。防止恶意提交增加ip参数；

--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -1,10 +1,14 @@
-
-#浏览器环境
+##################################浏览器环境
 dgb.security.browser.loginPage=/index.html
 dgb.security.browser.loginAction=/authentication/form
 #请求响应方式：JSON（default）、REDIRECT
 dgb.security.browser.responseType=JSON
+#------------------------------------------------------------
+##################################验证码
+#验证码路径/code/image应该是允许直接访问的，验证码的input name要为imageCode
 
 
-#允许直接访问url
-dgb.security.allowedPaths=${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico
+
+
+#允许直接访问url   #验证码路径/code/image
+dgb.security.allowedPaths=${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico,/code/image
