验证码认证重构完成，增加记住我功能

--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -1,14 +1,26 @@
 ##################################浏览器环境
 dgb.security.browser.loginPage=/index.html
+#登陆必须是post
 dgb.security.browser.loginAction=/authentication/form
 #请求响应方式：JSON（default）、REDIRECT
 dgb.security.browser.responseType=JSON
+dgb.security.browser.rememberMeSeconds=3600
+
 #------------------------------------------------------------
 ##################################验证码
+
+###########图形验证码
 #验证码路径/code/image应该是允许直接访问的，验证码的input name要为imageCode
+#长度
+dgb.security.code.imageCode.length=6
+dgb.security.code.imageCode.width=1
+dgb.security.code.imageCode.height=50
+dgb.security.code.imageCode.expireIn=60
+#需要验证码拦截的url，已默认含登陆loginAction（这里不用写）
+dgb.security.code.imageCode.urls=
 
+#记住我   input  name必须为remember-me
 
-
-
+#------------------------------------------------------------
 #允许直接访问url   #验证码路径/code/image
 dgb.security.allowedPaths=${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico,/code/image
