--- a/dgbschedule/pom.xml
+++ b/dgbschedule/pom.xml
@@ -34,7 +34,7 @@
         <!-- 添加Scheduled坐标 -->
        <!-- <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-context-support</artifactId>
+            <artifactId>spring-contgraceport</artifactId>
         </dependency>-->
 
         <!-- Sprng tx 坐标 -->
