--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -5,10 +5,15 @@ dgb.security.browser.loginAction=/authentication/form
 #请求响应方式：JSON（default）、REDIRECT
 dgb.security.browser.responseType=JSON
 dgb.security.browser.rememberMeSeconds=3600
-
+#------------------------------------------------------------
+##################################Session配置
+#session失效页面
+dgb.security.browser.session.destinationUrl=/test01.html
+dgb.security.browser.session.maximumSessions=1
+#为true会走失败Handler
+dgb.security.browser.session.maxSessionsPreventsLogin=false
 #------------------------------------------------------------
 ##################################验证码
-
 ###########图形验证码
 #验证码路径/code/image应该是允许直接访问的，验证码的input name要为imageCode
 #长度
@@ -23,4 +28,4 @@ dgb.security.code.imageCode.urls=
 
 #------------------------------------------------------------
 #允许直接访问url   #验证码路径/code/image
-dgb.security.allowedPaths=${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico,/code/image
+dgb.security.allowedPaths=${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico,/code/image,/session/invalid
