--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -13,6 +13,12 @@ dgb.security.browser.session.maximumSessions=1
 #为true会走失败Handler
 dgb.security.browser.session.maxSessionsPreventsLogin=false
 #------------------------------------------------------------
+##################################退出
+#退出成功跳转页面
+dgb.security.browser.logOut.logoutSuccessUrl=/test.html
+dgb.security.browser.logOut.action=/logOut
+
+#------------------------------------------------------------
 ##################################验证码
 ###########图形验证码
 #验证码路径/code/image应该是允许直接访问的，验证码的input name要为imageCode
@@ -23,9 +29,9 @@ dgb.security.code.imageCode.height=50
 dgb.security.code.imageCode.expireIn=60
 #需要验证码拦截的url，已默认含登陆loginAction（这里不用写）
 dgb.security.code.imageCode.urls=
-
+#------------------------------------------------------------
 #记住我   input  name必须为remember-me
 
 #------------------------------------------------------------
 #允许直接访问url   #验证码路径/code/image
-dgb.security.allowedPaths=${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico,/code/image,/session/invalid
+dgb.security.allowedPaths=${dgb.security.browser.session.destinationUrl},${dgb.security.browser.logOut.logoutSuccessUrl},${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico,/code/image,/session/invalid
