--- a/bdazjweb/src/main/resources/application-line.yml
+++ b/bdazjweb/src/main/resources/application-line.yml
@@ -33,9 +33,13 @@ spring:
         url-pattern: /*
         exclusions: "*.js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*"
 
+#具体可看springBoot文件
 mybatis:
   type-aliases-package: com.zj.bda.persistence.entity
   mapper-locations: classpath:mapper/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
+    cache-enabled: true
 #    configuration:
 #      log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
@@ -45,6 +49,7 @@ pagehelper:
   supportMethodsArguments: true
   params: count=countSql
 mapper:
-  mappers: com.zj.bda.persistence.grace.BaseMapper
-  not-empty: false
+  #可自定义mapper，可多个
+  mappers: -com.zj.bda.persistence.grace.BaseMapper
+  not-empty: true
   identity: ORACLE
