--- a/bdazjweb/src/main/resources/application-local.yml
+++ b/bdazjweb/src/main/resources/application-local.yml
@@ -36,6 +36,9 @@ spring:
 mybatis:
   type-aliases-package: com.zj.bda.persistence.entity
   mapper-locations: classpath:mapper/*.xml
+  configuration:
+      map-underscore-to-camel-case: true
+      cache-enabled: true
 #    configuration:
 #      log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
