--- a/bdazjweb/src/main/resources/application-local.yml
+++ b/bdazjweb/src/main/resources/application-local.yml
@@ -32,6 +32,8 @@ spring:
       web-stat-filter:
         url-pattern: /*
         exclusions: "*.js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*"
+      #超时重试次数
+      connection-error-retry-attempts: 3
 
 mybatis:
   type-aliases-package: com.zj.bda.persistence.entity
