--- a/bdazjcommon/pom.xml
+++ b/bdazjcommon/pom.xml
@@ -49,5 +49,11 @@
             <artifactId>idworker-client</artifactId>
             <version>0.0.8</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
 </project>
