--- a/bdazjweb/src/main/resources/application-local.yml
+++ b/bdazjweb/src/main/resources/application-local.yml
@@ -43,7 +43,7 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
   configuration:
       map-underscore-to-camel-case: true
-      cache-enabled: true
+      cache-enabled: false
 #    configuration:
 #      log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
