--- a/bdazjweb/src/main/resources/application-line.yml
+++ b/bdazjweb/src/main/resources/application-line.yml
@@ -37,6 +37,8 @@ spring:
         exclusions: "*.js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*"
       #超时重试次数
       connection-error-retry-attempts: 3
+      #必须为false
+      break-after-acquire-failure: false
 
 #具体可看springBoot文件
 mybatis:
