--- a/pom.xml
+++ b/pom.xml
@@ -90,17 +90,16 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>ojdbc7</artifactId>
-            <version>1.8.7</version>
-        </dependency>
-
         <!--mybatis-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>wm.oracle</groupId>
+            <artifactId>ojdbc7</artifactId>
+            <version>10</version>
         </dependency>
         <!--mapper-->
         <dependency>
