--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -5,6 +5,8 @@ dgb.security.browser.loginAction=/authentication/form
 #请求响应方式：JSON（default）、REDIRECT
 dgb.security.browser.responseType=JSON
 dgb.security.browser.rememberMeSeconds=3600
+#权限不足页面，只有为responseType为REDIRECT才会生效
+dgb.security.browser.noPermissionPage=/error/403.html
 #------------------------------------------------------------
 ##################################Session配置
 #session失效页面
@@ -34,7 +36,7 @@ dgb.security.code.imageCode.urls=
 
 #------------------------------------------------------------
 #允许直接访问url   #验证码路径/code/image
-dgb.security.allowedPaths=${dgb.security.browser.session.destinationUrl},${dgb.security.browser.logOut.logoutSuccessUrl},${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico,/code/image,/session/invalid
+dgb.security.allowedPaths=${dgb.security.browser.noPermissionPage},${dgb.security.browser.session.destinationUrl},${dgb.security.browser.logOut.logoutSuccessUrl},${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico,/code/image,/session/invalid
 #------------------------------------------------------------
 ##################################浏览器安全
 
