--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -36,7 +36,7 @@ dgb.security.code.imageCode.urls=
 
 #------------------------------------------------------------
 #允许直接访问url   #验证码路径/code/image
-dgb.security.allowedPaths=${dgb.security.browser.noPermissionPage},${dgb.security.browser.session.destinationUrl},${dgb.security.browser.logOut.logoutSuccessUrl},${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico,/code/image,/session/invalid
+dgb.security.allowedPaths=${dgb.security.browser.noPermissionPage},${dgb.security.browser.session.destinationUrl},${dgb.security.browser.logOut.logoutSuccessUrl},${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico,/code/image,/session/invalid,/test/c2
 #------------------------------------------------------------
 ##################################浏览器安全
 
