--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -21,6 +21,11 @@ dgb.security.browser.session.maxSessionsPreventsLogin=false
 dgb.security.browser.logOut.action=/logOut
 
 #------------------------------------------------------------
+##################################注册
+#注册页面（目前没用）
+#dgb.security.registe.page=
+dgb.security.registe.url=/registe
+#------------------------------------------------------------
 ##################################验证码
 ###########图形验证码
 #验证码路径/code/image应该是允许直接访问的，验证码的input name要为imageCode
@@ -36,7 +41,7 @@ dgb.security.code.imageCode.urls=
 
 #------------------------------------------------------------
 #允许直接访问url   #验证码路径/code/image
-dgb.security.allowedPaths=${dgb.security.browser.noPermissionPage},${dgb.security.browser.session.destinationUrl},${dgb.security.browser.logOut.logoutSuccessUrl},${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico,/code/image,/session/invalid,/test/c2
+dgb.security.allowedPaths=${dgb.security.registe.url},${dgb.security.browser.noPermissionPage},${dgb.security.browser.session.destinationUrl},${dgb.security.browser.logOut.logoutSuccessUrl},${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico,/code/image,/session/invalid,/test/c2
 #------------------------------------------------------------
 ##################################浏览器安全
 
