逐步将项目脱离bda

--- a/bdazjweb/pom.xml
+++ b/bdazjweb/pom.xml
@@ -18,12 +18,12 @@
     <dependencies>
         <dependency>
             <groupId>com.bda</groupId>
-            <version>${com.zj.bda}</version>
+            <version>${wm.dgb}</version>
             <artifactId>bda-zj-service</artifactId>
         </dependency>
         <dependency>
             <groupId>com.bda</groupId>
-            <version>${com.zj.bda}</version>
+            <version>${wm.dgb}</version>
             <artifactId>dgb-security</artifactId>
         </dependency>
         <dependency>
