--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     </parent>
 
     <properties>
-        <com.zj.bda>1.0.0-SNAPSHOT</com.zj.bda>
+        <wm.dgb>1.0.0-SNAPSHOT</wm.dgb>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
@@ -42,7 +42,7 @@
 
         <dependency>
             <groupId>com.bda</groupId>
-            <version>${com.zj.bda}</version>
+            <version>${wm.dgb}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>mybatis</artifactId>
