--- a/bdazjweb/src/main/resources/application-local.yml
+++ b/bdazjweb/src/main/resources/application-local.yml
@@ -68,6 +68,7 @@ mybatis:
   configuration:
       map-underscore-to-camel-case: true
       cache-enabled: false
+#这个是打印MyBatis日志的一种方式
 #    configuration:
 #      log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
