--- a/bdazjcommon/pom.xml
+++ b/bdazjcommon/pom.xml
@@ -71,5 +71,11 @@
             <version>4.5.3</version>
         </dependency>
 
+        <!--搜索Spring REST API实体和DTO之间的转换-->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>0.7.4</version>
+        </dependency>
     </dependencies>
 </project>
