--- a/bdazjservice/pom.xml
+++ b/bdazjservice/pom.xml
@@ -17,6 +17,12 @@
             <version>${wm.dgb}</version>
             <artifactId>dgb-schedule</artifactId>
         </dependency>
+        <!--zookeeper原生API依赖-->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.10</version>
+        </dependency>
     </dependencies>
 
 </project>
