--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,20 @@
             <version>1.1.10</version>
         </dependency>
 
+        <!--zookeeper原生API依赖-->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.10</version>
+            <!--在父模块中不要这个，在Service模块中要这个-->
+            <!--<exclusions>
+                <exclusion>
+                    <artifactId>slf4j-log4j12</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>-->
+        </dependency>
+
     </dependencies>
 
 </project>
