解决Maven循环依赖的问题

--- a/bdazjpersistence/pom.xml
+++ b/bdazjpersistence/pom.xml
@@ -12,4 +12,12 @@
     <artifactId>bda-zj-persistence</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.bda</groupId>
+            <version>${wm.dgb}</version>
+            <artifactId>bda-zj-common</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
