--- a/pom.xml
+++ b/pom.xml
@@ -96,11 +96,18 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.1</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>wm.oracle</groupId>
             <artifactId>ojdbc7</artifactId>
             <version>10</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
         </dependency>
+
         <!--mapper-->
         <dependency>
             <groupId>tk.mybatis</groupId>
