--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <developers>
         <developer>
             <name>Dongguabai</name>
-            <email>min.wei@brilliant-solution.com</email>
+            <email>dongguabai@126.com</email>
         </developer>
     </developers>
 
