--- a/bdazjweb/pom.xml
+++ b/bdazjweb/pom.xml
@@ -31,6 +31,14 @@
             <artifactId>annotations</artifactId>
             <version>RELEASE</version>
         </dependency>
+
+        <!--Excel导出依赖-->
+        <dependency>
+            <groupId>net.sourceforge.jexcelapi</groupId>
+            <artifactId>jxl</artifactId>
+            <version>2.6.12</version>
+        </dependency>
+
         <!--war用-->
         <!--<dependency>
            <groupId>javax.servlet</groupId>
