--- a/bdazjcommon/pom.xml
+++ b/bdazjcommon/pom.xml
@@ -77,5 +77,17 @@
             <artifactId>modelmapper</artifactId>
             <version>0.7.4</version>
         </dependency>
+        <!--https://hutool.cn/docs/ -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>4.5.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpasyncclient</artifactId>
+            <version>4.1.2</version>
+        </dependency>
     </dependencies>
 </project>
