--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -1,49 +1,49 @@
-##################################浏览器环境
+##################################\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 dgb.security.browser.loginPage=/index.html
-#登陆必须是post
+#\uFFFD\uFFFD\u00BD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFDpost
 dgb.security.browser.loginAction=/authentication/form
-#请求响应方式：JSON（default）、REDIRECT
+#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u04E6\uFFFD\uFFFD\u02BD\uFFFD\uFFFDJSON\uFFFD\uFFFDdefault\uFFFD\uFFFD\uFFFD\uFFFDREDIRECT
 dgb.security.browser.responseType=JSON
 dgb.security.browser.rememberMeSeconds=3600
-#权限不足页面，只有为responseType为REDIRECT才会生效
+#\u0228\uFFFD\u07B2\uFFFD\uFFFD\uFFFD\u04B3\uFFFD\u68EC\u05BB\uFFFD\uFFFD\u03AAresponseType\u03AAREDIRECT\uFFFD\u017B\uFFFD\uFFFD\uFFFD\u0427
 dgb.security.browser.noPermissionPage=/error/403.html
 #------------------------------------------------------------
-##################################Session配置
-#session失效页面
+##################################Session\uFFFD\uFFFD\uFFFD\uFFFD
+#session\u02A7\u0427\u04B3\uFFFD\uFFFD
 dgb.security.browser.session.destinationUrl=/test01.html
 dgb.security.browser.session.maximumSessions=1
-#为true会走失败Handler
+#\u03AAtrue\uFFFD\uFFFD\uFFFD\uFFFD\u02A7\uFFFD\uFFFDHandler
 dgb.security.browser.session.maxSessionsPreventsLogin=false
 #------------------------------------------------------------
-##################################退出
-#退出成功跳转页面，不用就注掉了
+##################################\uFFFD\u02F3\uFFFD
+#\uFFFD\u02F3\uFFFD\uFFFD\u0279\uFFFD\uFFFD\uFFFD\u05EA\u04B3\uFFFD\u68EC\uFFFD\uFFFD\uFFFD\u00FE\uFFFD\u05E2\uFFFD\uFFFD\uFFFD\uFFFD
 #dgb.security.browser.logOut.logoutSuccessUrl=
 dgb.security.browser.logOut.action=/logOut
 
 #------------------------------------------------------------
-##################################注册
-#注册页面（目前没用）
+##################################\u05E2\uFFFD\uFFFD
+#\u05E2\uFFFD\uFFFD\u04B3\uFFFD\u68E8\u013F\u01F0\u00FB\uFFFD\u00E3\uFFFD
 #dgb.security.registe.page=
 dgb.security.registe.url=/registe
 #------------------------------------------------------------
-##################################验证码
-###########图形验证码
-#验证码路径/code/image应该是允许直接访问的，验证码的input name要为imageCode
-#长度
+##################################\uFFFD\uFFFD\u05A4\uFFFD\uFFFD
+###########\u037C\uFFFD\uFFFD\uFFFD\uFFFD\u05A4\uFFFD\uFFFD
+#\uFFFD\uFFFD\u05A4\uFFFD\uFFFD\u00B7\uFFFD\uFFFD/code/image\u04E6\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u05B1\uFFFD\u04F7\uFFFD\uFFFD\u02B5\u0123\uFFFD\uFFFD\uFFFD\u05A4\uFFFD\uFFFD\uFFFDinput name\u04AA\u03AAimageCode
+#\uFFFD\uFFFD\uFFFD\uFFFD
 dgb.security.code.imageCode.length=2
 dgb.security.code.imageCode.width=80
 dgb.security.code.imageCode.height=50
 dgb.security.code.imageCode.expireIn=60
-#需要验证码拦截的url，已默认含登陆loginAction（这里不用写）
+#\uFFFD\uFFFD\u04AA\uFFFD\uFFFD\u05A4\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0635\uFFFDurl\uFFFD\uFFFD\uFFFD\uFFFD\u012C\uFFFD\u03FA\uFFFD\uFFFD\uFFFD\u00BDloginAction\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFCBB\uFFFD\uFFFD\u0434\uFFFD\uFFFD
 dgb.security.code.imageCode.urls=
 #------------------------------------------------------------
-#记住我   input  name必须为remember-me
+#\uFFFD\uFFFD\u05E1\uFFFD\uFFFD   input  name\uFFFD\uFFFD\uFFFD\uFFFD\u03AAremember-me
 
 #------------------------------------------------------------
-#允许直接访问url   #验证码路径/code/image
+#\uFFFD\uFFFD\uFFFD\uFFFD\u05B1\uFFFD\u04F7\uFFFD\uFFFD\uFFFDurl   #\uFFFD\uFFFD\u05A4\uFFFD\uFFFD\u00B7\uFFFD\uFFFD/code/image
 dgb.security.allowedPaths=${dgb.security.registe.url},${dgb.security.browser.noPermissionPage},${dgb.security.browser.session.destinationUrl},${dgb.security.browser.logOut.logoutSuccessUrl},${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico,/code/image,/session/invalid,/test/c2,/build/*
 #------------------------------------------------------------
-##################################浏览器安全
-
-#crsf不拦截路径
+##################################\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u022B
+#\u963F\u5927\u76D8\u9E21\u554A
+#crsf\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u00B7\uFFFD\uFFFD
 dgb.security.browser.csrf=${dgb.security.allowedPaths}
